@@ -1,4 +1,4 @@
-private variable Pager_Rows = 22;
+private variable Pager_Rows = NULL;
 private variable Pager = getenv ("PAGER");
 if (Pager == NULL)
   Pager = "more";
@@ -261,6 +261,21 @@ private define print_array (a, device)
      }
 }
 
+private define get_pager_rows ()
+{
+   if (Pager_Rows != NULL)
+     return Pager_Rows;
+
+   variable rows;
+#ifexists slsh_get_screen_size
+   (rows,) = slsh_get_screen_size ();
+#else
+   rows = 24;
+#endif
+   return rows - 2;		       %  leave room for the prompt
+}
+
+
 define print ()
 {
    variable usage_string
@@ -282,6 +297,7 @@ define print ()
 	if (pager_pgm == NULL)
 	  pager_pgm = Pager;
      }
+   variable noescape = qualifier_exists ("noescape");
 
    variable device = NULL;
    if (_NARGS == 2)
@@ -312,20 +328,24 @@ define print ()
 
    if (use_pager == -1)
      {
+	variable pager_rows = get_pager_rows ();
+
 	switch (t)
 	  {
 	   case Array_Type:
 	     variable dims = array_shape (x);
-	     use_pager = ((dims[0] > Pager_Rows)
-			  || (prod(dims) > 10*Pager_Rows));
+	     use_pager = ((dims[0] > pager_rows)
+			  || (prod(dims) > 10*pager_rows));
 	  }
 	  {
 	   case List_Type:
-	     use_pager = length (x) > Pager_Rows;
+	     use_pager = length (x) > pager_rows;
 	  }
 	  {
 	   case String_Type:
-	     use_pager = count_byte_occurrences (x, '\n') > Pager_Rows;
+	     use_pager = count_byte_occurrences (x, '\n') > pager_rows;
+	     if (noescape)
+	       str_x = x;
 	  }
 	  {
 	     if (is_struct_type (x))
@@ -333,7 +353,7 @@ define print ()
 	     else
 	       str_x = generic_to_string (x);
 
-	     use_pager = (count_byte_occurrences (str_x, '\n') > Pager_Rows);
+	     use_pager = (count_byte_occurrences (str_x, '\n') > pager_rows);
 	  }
      }
 
@@ -352,7 +372,10 @@ define print ()
 	  return print_list (x, device);
 
 	if ((t == String_Type) && use_pager)
-	  return device.puts (x);
+	  {
+	     () = device.puts (x);
+	     return;
+	  }
 
 	if (str_x != NULL)
 	  x = str_x;
